cmake_minimum_required(VERSION 2.6)
set(ProjName OSGCh03Ex05)
set(UtilFile ../common/common.cpp ../common/PickHandler.cpp)
project(${ProjName})

find_package(OpenThreads)
find_package(osg)
find_package(osgDB)
find_package(osgUtil)
find_package(osgViewer)
find_package(osgGA)
find_package(osgAnimation)
find_package(osgText)

macro(config_project PROJNAME LIBNAME)
	include_directories( ${${LIBNAME}_INCLUDE_DIR} )
	target_link_libraries( ${PROJNAME} ${${LIBNAME}_LIBRARY} )
endmacro()

include_directories(../common)
add_executable(${ProjName} ${UtilFile} main.cpp)
config_project(${ProjName} OPENTHREADS)
config_project(${ProjName} OSG)
config_project(${ProjName} OSGDB)
config_project(${ProjName} OSGUTIL)
config_project(${ProjName} OSGVIEWER)
config_project(${ProjName} OSGGA)
config_project(${ProjName} OSGANIMATION)
config_project(${ProjName} OSGTEXT)
